--- a/otp-mobil/pom.xml
+++ b/otp-mobil/pom.xml
@@ -39,7 +39,13 @@
             <artifactId>opencsv</artifactId>
             <version>5.7.1</version>
         </dependency>
-        
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
+
 
     </dependencies>
 
