--- a/otp-mobil/src/main/resources/application.properties
+++ b/otp-mobil/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#Spring JPA
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
